# DecorrelatedBN

./: Install_MAGMA.md  Install_Magga.txt  LICENSE  README.md  dataset-mnist.lua  execute_Conv_1vggA_1validate_adam.sh  execute_Conv_1vggA_1validate_sgd.sh  execute_Conv_1vggA_2test_ELU.sh  execute_Conv_1vggA_2test_adam.sh  execute_Conv_1vggA_2test_base.sh  execute_Conv_1vggA_2test_var.sh  execute_Conv_2residual_old.sh  execute_Conv_3residual_wide_Cifar100_wr_BN_d28_h48_g16_b128_dr0.3_s1_C2.sh  execute_Conv_3residual_wide_Cifar100_wr_DBN_scale_L1_d28_h48_g16_b128_dr0.3_s1_C3.sh  execute_Conv_3residual_wide_Cifar10_wr_BN_d28_h48_g16_b128_dr0.3_s1_C2.sh  execute_Conv_3residual_wide_Cifar10_wr_DBN_scale_L1_d28_h48_g16_b128_dr0.3_s1_C3.sh  execute_Conv_4Splain_1deep.sh  execute_Conv_4Splain_2large.sh  execute_MLP_0debug_MNIST.sh  execute_MLP_1FIM_YaleB_HyperP.sh  execute_MLP_1FIM_YaleB_HyperP_nnn.sh  execute_MLP_1FIM_YaleB_best.sh  execute_MLP_2PIE.sh  execute_MLP_2PIE_DBNGroup.sh  execute_MLP_2PIE_nnn.sh  exp_Conv_1vggA_1validate.lua  exp_Conv_1vggA_2test.lua  exp_Conv_2residual_old.lua  exp_Conv_3residual_wide_Cifar10.lua  exp_Conv_3residual_wide_Cifar100.lua  exp_Conv_4Splain_1deep.lua  exp_Conv_4Splain_2large.lua  exp_MLP_0debug_MNIST.lua  exp_MLP_1FIM_YaleB.lua  exp_MLP_2perform_PIE.lua  provider.lua
models/imagenet/cuSpatialDBN/: CMakeLists.txt  Spatial_DBN_opt.lua  cudbn-1.0-0.rockspec  init.lua
models/imagenet/cuSpatialDBN/cmake/: FindCudaArch.cmake  FindCudaArch.cmake_oldVersion
module/: Affine_module.lua  BatchLinear_FIM.lua  DecorelateBN_Advance.lua  (+6 more)
(+24 files in other folders)
